--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>コンサルタント体験 人生ゲーム</title>
+  <title>デロイト体験 人生ゲーム</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>コンサルタント体験 人生ゲーム</h1>
+    <h1>デロイト体験 人生ゲーム</h1>
   </header>
 
   <main>
