Update title and header text in index.html

--- a/index.html
+++ b/index.html
@@ -3,12 +3,12 @@
 <head>
   <meta charset="utf-8" />
   <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>デロイト体験 人生ゲーム</title>
+  <title>Make An Impact That Matters</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
   <header>
-    <h1>デロイト体験 人生ゲーム</h1>
+    <h1>Make An Impact That Matters</h1>
   </header>
 
   <main>
@@ -56,7 +56,7 @@
   </div>
 
   <footer>
-    <small>作成: MakeAnImpactThatMatters / Ske-417</small>
+    <small>制作 : Ske-417</small>
   </footer>
 
   <script src="script.js"></script>
